Correction dans la partie expérimentale

--- a/piot2012cascading/main.org
+++ b/piot2012cascading/main.org
@@ -433,39 +433,28 @@ Finally by regrouping the results in \eqref{equation: cas3-1} and \eqref{equatio
    - [X] Least squares
    - [X] Heuristic
 #+end_comment
-   As a classifier, we choose a structured large margin approach \cite{taskar2005learning} which solves :
-\begin{equation}
-  \min_{\omega,\zeta}\frac{1}{2}\|\omega\|^2 +
-  \frac{\eta}{N}\sum_{i=1}^N \zeta_i \text{~~~~s.t.~~~~} \forall i,
-  \omega^T{\phi}(s_i,a_i)+\zeta_i \geq \max_a \omega^T
-  {\phi}(s_i,a) + \mathcal L (s_i,a). \label{eq:qp_taskar}
-\end{equation}
-With $\mathcal L(s_i,a_i)=0$ and $\mathcal L(s_i,a\neq a_i)=1$, using some feature function $\phi$ over the state-action space. Practically, we use a subgradient descent on an objective function in which the constraints have been moved \cite{ratliff2006maximum}. When comparing our algorithm to pure classification we used the output of this classifier.
+   As a classifier, we choose a structured large margin approach \cite{taskar2005learning} which solves $\min_{\omega,\zeta}\frac{1}{2}\|\omega\|^2 + \frac{\eta}{N}\sum_{i=1}^N \zeta_i$  s.t. $\forall i, q(s_i,a_i)+\zeta_i \geq \max_a q(s_i,a) + \mathcal L (s_i,a)$, with $\mathcal L(s_i,a_i)=0$ and $\mathcal L(s_i,a\neq a_i)=1$ and for some slack variables $\zeta_i$. Assuming the slack variables are tight and using the linear parametrization $q(s,a) = \omega^T\phi(s,a)$ with some feature function $\phi$ over the state-action space, we use a subgradient descent on an objective function in $J$ in which the constraints have been moved \cite{ratliff2006maximum} : $J(\theta) = {1\over D} \sum_{i=1}^D\left(\max_{a}(\theta^T\phi(s_i,a) + l(s_i,a)) - \theta^T\phi(s_i,a_i) \right)$. When comparing our algorithm to pure classification we used the output of this classifier.
 
 As we try to devise a reward function $\hat R^C$ using /only/ transitions from the expert (case not covered in the anlysis), we have $D_C = D_R$. A good reward function can not be learnt from this data alone as no datapoint exists for tuples $(s,a,s')$ such that $a \neq \pi_E(s)$. We can use a heuristic to get a more complete dataset for the regression step ; assuming (this is quite pessimistic) that deviating from the expert's choice is the worst thing to do, we define $\hat r_{min} = \min\limits_{1\geq i\geq D=D'} \hat r_i - \epsilon, \epsilon>0$ and create the augmented dataset $\{(s_{i},a_{i},\hat{r}_i)\}_{1\leq i \leq D=D'} \cup \{(s_{i},a,\hat{r}_{min})\}_{1\leq i \leq D=D',a\in A,a\neq a_i}$ which is then fed to a simple least-squares regressor using the same features $\phi$ as the classifier. Using straightforward matricial notations, this can be written $\theta = (\Phi^T\Phi + \lambda Id)^{-1}\Phi^T\hat R$.
 Finally, we have $\hat R^C(s,a) = \theta^t \phi(s,a)$.
-
-** Results on the GridWorld
 #+begin_comment
    - [X] Desc of problems
    - [X] Results
    - [X] Better than state-of-the-art
 #+end_comment
-   We first tested our approach on a simple $5\times 5$ gridworld. The expert and the agent can choose between 4 actions (down, left right, or up) that sends the player in the corresponding neighbooring cell with probabilty $0.7$. Three times out of ten however, the actions fails and the player moves in another different random direction. Trying to go off the grid will result in the player staying in its position. The expert begins in the lower left corner and is trained to go to the higher right corner by an exact dynamic programming algorithm. The original reward (with respect to which the performance of the agents is computed) is null everywhere but in the higher right corner where it is $1$ for all actions.
+   We first tested our approach on a simple $5\times 5$ GridWorld. The expert and the agent can choose between 4 actions (down, left right, or up) that sends the player in the corresponding neighbooring cell with probabilty $0.7$. Three times out of ten however, the actions fails and the player moves in another different random direction. Trying to go off the grid will result in the player staying in its position. The expert begins in the lower left corner and is trained to go to the higher right corner by an exact dynamic programming algorithm. The original reward (with respect to which the performance of the agents is computed) is null everywhere but in the higher right corner where it is $1$ for all actions.
 
-The results are shown in two figures. Figure \ref{Fig1.fig} show the baselines we compare ourselves with. Pure classification and the algorithm of \cite{abbeel2004apprenticeship} are on par with one another, both far better than training an agent on a random reward ; their means both converge to a value close to the expert's given enough samples. Notice that the IRL algorithm can still critically fail even when given a lot of samples. This explain the standard deviation going over the maximum. Figure \ref{Fig2.fig} shows results of our algorithm together with the mean performance of both forementionned approaches (variance and min/max were dropped for legibility's sake). It shows the soundness of our cascading approach : when only a few samples are available, we provide a reward that lead to a better (and safer, notice the decreasing standard deviation) policy. When samples are widely available all approaches converge to the same value.
-
-** Results on the highway
+The results are shown in two figures. Figure \ref{Fig1.fig} shows the baselines we compare ourselves with. Pure classification and the algorithm of \cite{abbeel2004apprenticeship} are on par with one another, both far better than training an agent on a random reward ; their means both converge to a value close to the expert's given enough samples. Notice that the IRL algorithm can still critically fail even when given a lot of samples. This explain the standard deviation going over the maximum. Figure \ref{Fig2.fig} shows results of our algorithm together with the mean performance of both forementionned approaches (variance and min/max were dropped for legibility's sake). It shows the soundness of our cascading approach: when only a few samples are available, we provide a reward that lead to a better (and safer, notice the decreasing standard deviation) policy. When samples are widely available all approaches converge to the same value.
 #+begin_comment
    - [X] Desc of poblem
    - [X] results
    - [ ] Regression step is useful
 #+end_comment
-To illustrate a more challenging problem with an increased state space size, we coded a driving simulator inspired from a benchmark seen in \cite{syed2008apprenticeship,syed2008game}. The agent controls a car that can switch between the three lanes of the road, go off-road on either side and modulate between three speed levels. The expert is trained to go as fast as possible (high reward) while avoiding collisions (harshly penalised) with randomly placed slower moving vehicles and avoiding going off-road (moderately penalised). Any other situation receives a null reward. Because the forward RL problem is too hard to solve with so little information, the algorithm from \cite{abbeel2004apprenticeship} was not able to solve the problem using only samples from the expert as ours did. We still used it as a baseline, allowing it to use features expectations and intermediates optimal policies /computed perfectly with the help of the model/.
+To illustrate a more challenging problem with an increased state space size, we coded a driving simulator inspired from a benchmark seen in \cite{syed2008apprenticeship,syed2008game}. The agent controls a car that can switch between the three lanes of the road, go off-road on either side and modulate between three speed levels. The expert is trained to go as fast as possible (high reward) while avoiding collisions (harshly penalised) with randomly placed slower moving vehicles and avoiding going off-road (moderately penalised). Any other situation receives a null reward. Because the forward RL problem is too hard to solve with so little information, the algorithm from \cite{abbeel2004apprenticeship} was not able to solve the problem using only samples from the expert as ours did. We still used it as a baseline, allowing it to use features expectations and intermediates optimal policies (see \cite{abbeel2004apprenticeship} for the details of the algorithm) /computed perfectly with the help of the model/.
 
 We used features stemming from a discretization of the state-action space. The performance is assessed with respect to the uniform distribution $\mathcal{U}$, which shows the generalization ability of each method).
 
-As expected, pure classification is not sample efficient enough to provide a good control whereas our approach is able to generalize from very little data and exhibits performance on par with the /fully-informed/ state-of-the-art algorithm when given as few as 100 samples. This empirically shows that the usefulness of the regression step. Furthermore, the state-of-the-art algorihtm make use of intermediate policies, which is computationally costly particularily when the state space gets big. Our approach computational cost scales with the number of samples we are given, which is as we demonstrated a small number. Experimentally, when producing the data for our graph, it took less time to run the cascading approach 50 times for 6 abcissa than to run \cite{abbeel2004apprenticeship}'s algorithm once.
+As expected, pure classification is not sample efficient enough to provide a good control whereas our approach is able to generalize from very little data and exhibits performance on par with the /fully-informed/ state-of-the-art algorithm when given as few as 100 samples. This empirically shows the usefulness of the regression step. Furthermore, the state-of-the-art algorihtm makes use of intermediate policies, which is computationally costly particularily when the state space gets big. Our approach computational cost scales with the number of samples we are given, which is as we demonstrated a small number. Experimentally, when producing the data for our graph, it took less time to run the cascading approach 50 times for 6 abcissae than to run \cite{abbeel2004apprenticeship}'s algorithm once.
 
 * Related work
 \label{section: related work}
