--- a/Rapport1A/main.org
+++ b/Rapport1A/main.org
@@ -1,19 +1,51 @@
-#+TITLE:Rapport Intermédiaire de Thèse, Janvier-Décembre 2011
+#+LaTeX_CLASS: article
+#+LATEX_HEADER:\usepackage[frenchb]{babel}
+#+LATEX_HEADER:\usepackage[utf8]{inputenc}
+#+LATEX_HEADER:\usepackage[T1]{fontenc}
+#+LATEX_HEADER:\usepackage{bibtopic}
+#+TITLE:Rapport Intermédiaire de Thèse\\
+#+LaTeX: \begin{center} \large
+/Découverte automatique d'attributs pour l'imitation/\\Encadrée par Matthieu Geist et Yann Guermeur\\Supélec Metz, Janvier-Décembre 2011
+#+LaTeX: \end{center}
+------
 
+#+begin_abstract
+L'adoption de systèmes automatisés autonomes réduit les coûts et les risques, cependant la complexité e la mise au point de tels systèmes gêne leur adoption généralisée. Des approches permettent à ces systemes de prendre en charge des environnements de plus en plus difficiles font apparaître de nouveaux défis. L'un de ceux-ci est la définition de la consigne. A mesure que les tâches confiées aux systèmes automatiques se complexifient, la définition de ces tâches devient moins aisée. Une méthode prometteuse est d'observer un expert (par exemple un humain effectuant la tâche) et d'extraire automatiquement la description à partir d'une analyse de son comportement. Ce rapport situe le sujet de thèse parmis les approches existantes et explique les avancées déjà effectuées, qui ont donné lieu à trois publications en conférences internationales et une en conférence francophone.
+#+end_abstract
+------
+\pagebreak
+[TABLE-OF-CONTENTS]
 #+begin_comment
- - [X] Situer le travail et son intérêt
-   - [X] IA faible
-   - [X] Systèmes autonomes, moins couteux et plus fiables
- - [X] Parler des autres approches
-   - [X] Automatique (nécessite le modèle inverse)
-   - [X] Planification (pas de remise en question à mesure que le programme s'exécute)
-   - [X] Prise de décision séquentielle
-   - [X] Renforcement (Récompense : description de la tâche ; politique : maximisier cette récompnese sur le long terme, quelle que soit les embuches)
- - [X] Mettre en avant une des difficultés du refocement : la définition de la récompense
- - [X] Solution apportée (exemple de la voiture)
- - [ ] Difficultés liées au problème (récompense nulle, cout des données)
- - [ ] Etat de l'art au début de la thèse (domaine récent, état de l'art éparpillé)
- - [ ] 
+
+   
+
+ - Critères à checker
+   - [X] Parler de l'automatique
+     - [X] Il existe un boucle de rétro action qui de fait prend l'état en compte
+     - [X] Marche très bien par exemple sur les machine outils
+     - [X] Pêche par exemple pour les systèmes à dynamique non linéaire (jeux ?)
+     - [X] Unidimensionnel
+     - [X] Champ vaste et assez complet
+   - [X] Parler de la planif
+     - [X] On connait les états dans lequel le système se trouve, on établit un plan pour aller là où on veut, recherche exhaustive ou heuristique dans l'espace des états
+     - [X] Si le modèle de l'incertitude est faux ça peut merder
+   - [-] Enrichir le titre
+     - [X] Rajouter un abstract
+     - [ ] contextualiser : Pour qui, rappel du sujet, encadrants
+   - [X] Passer le doc en Français
+   - [X] Parler de l'apprentissage par renforcement (et de la programmation dynamique dans un premier temps puis différencier les deux)
+     - [X] Introduire la récompense comme "critère local quant à la qualité du contrôle"
+     - [X] On optimise le cumul des récompenses
+     - [X] Politique vs. plan
+     - [X] Algo en ligne avec oubli : adaptation
+     - [X] Alog hors ligne : sécurité
+     - Le problème qu'on cherche à résoudre est de faire évoluer des machines dans des environnements non maîtrisés, difficile à modéliser et où les êtres vivants s'en sortent sans pour autant être totalement optimaux. Faire des machines pouvant résoudre des problèmes génériques et pas ad hoc, au prix de perdre en efficacité sur chacune des tâches. 
+   - [ ] Parler de l'ARI
+     - et puis sur l'ARI : toutes les méthodes optimisent un critère (autom, planif, AR) et peu de gens se posent la question de la pertinence de la consigne. C'est un problème que se posait d'ailleurs déjà Kalman apparemment ! C'est donc pas  nouveau mais c'est moins étudié.
+   - [X] Sujet de thèse
+     - [X] Donner à un moment le vrai intitulé
+   - [ ] Mettre plus de références
+   - [ ] Séparer mes références des autres
 #+end_comment
 
 
@@ -21,51 +53,62 @@
   
   Ces dernières décennies, de plus en plus de tâches sont confiées à des systèmes automatiques. L'automatisation de plus en plus poussée et l'autonomie grandissante des systèmes en place réduit de manière générale les coûts et les risques associés. Diverses techniques peuvent être envisagées pour automatiser un système, qu'il s'agisse du thermostat d'un four, d'une machine-outil, d'un robot humanoïde ou même d'un système de dialogue par téléphone.\\
   
-  L'approche la plus classique, antérieure même à l'avènement de l'informatique, est celle de l'automatique. Armé d'un modèle inverse du système à contrôler, l'automaticien parvient à créer un mécanisme soumettant le système à la consigne de l'opérateur. Le succès de cette méthode est indéniable comme le prouve sa vaste adoption encore aujourd'hui (une direction assistée est un système asservi au sens de l'automatique, par exemple). Néanmoins, les informations qu'il est nécessaire d'obtenir sur le système à contrôler restent parfois inconnues. Un modèle inverse est en effet une formulation mathématique du monde permettant de trouver l'action à effectuer pour transiter entre deux états donnés. Il n'est pas possible d'obtenir une telle généricité pour la plupart des systèmes.\\
+  Pour décrire ces techniques et situer cette thèse dans ce champ foisonnant nous emploierons un vocabulaire unifié tiré principalement du domaine de l'/apprentissage par renforcement/. Nous parlerons du système "intelligent" aux commandes de l'entité à contrôler comme de l'/agent/ dont nous adoptons le point de vue. Ainsi, l'entité à contrôler devient l'/environnement/, qui fournit à l'/agent/ de l'information sur son /état/ courant. En retour, l'/agent/ applique une /action/ sur l'/environnement/ afin de changer son /état/. Bien que certains systèmes autonomes (certains /agents/, donc) soient continus par nature, comme pour l'exemple historique du régulateur à boules de Watt, nous traiterons sans perte de généralité dans cette introduction d'/agent/ prenant leurs décisions /séquentiellement/ : à un moment donné, l'/agent/ choisit l'/action/ qu'il juge appropriée au vu de l'/état/ dans lequel il se trouve, ce qui le fait /transiter/ après un certain /pas de temps/ dans un autre /état/, où il choisira à nouveau une /action/ et ainsi de suite.\\
+
+  Une idée très importante appraît ici, celle de la /rétroaction/. L'agent n'agit pas sur l'environnement en aveugle, mais utilise l'information dont il dispose sur l'/état/ du système pour choisir l'/action/ appropriée. L'existence de cette boucle dans le trajet de l'information est indispensable à l'autonomie d'un agent.\\
+
+  L'approche la plus classique, dont les débuts sont de loin antérieurs à l'avènement de l'informatique, est celle de l'automatique. Une /consigne/ est fournie à l'agent dont les actions vont avoir pour but de minimiser l'/erreur/ entre la /consigne/ et l'/état/. Le succès de ce domaine est indéniable comme le prouve sa vaste adoption encore aujourd'hui ; une direction assistée est un système asservi au sens de l'automatique, par exemple. La /consigne/ est fournie par le conducteur qui tourne le volant, l'/agent/ s'occuppe d'orienter les roues en conséquence, en appliquant la force nécessaire quelle que soit la vitesse du véhicule ou la nature du terrain sous les roues.\\
+  Dans son expression la plus générale ce domaine est centenaire, les outils développés ont atteint une grande maturité. Les machines-outils des chaînes d'assemblage montrent par exemple la précision qu'il est possible d'atteindre malgré le poids des pièces ou des bras. Le problème dit du /contrôle optimal/ est, sous certaine contraintes, résolu par les outils de l'automatique ; il est possible d'implémenter l'agent répondant du mieux possible à certaines contraintes (de temps, de consommation d'énergie etc.).\\
+  L'application des outils issus de l'automatique devient cependant moins aisée lorsque l'environnement suit une évolution non linéaire. Cela se produit facilement dès qu'un humain apparaît dans l'environnement, par exemple lorsque l'on souhaite créer un agent jouant un jeu, comme le go, les échecs ou le backgammon. Le contrôle d'environnements ne pouvant se représenter par une seule variable peut également s'avérer problématique pour ces outils, traditionnellement destinés à contrôler une seule valeur. On peut alors par exemple utiliser plusieurs agents en parallèle, ou les hierarchiser.\\
+
+  Une approche moins contraignante sur des problèmes présentant ces caractéristiques est la /planification/. Etant donnée une représentation des états admissibles par l'environnement, un /plan/ est élaboré. Cette suite d'action sera appliquée en séquence par l'agent pour atteindre le but fixé. L'évolution de l'environnement n'a pas besoin d'être linéaire, et celui-ci peut-être représenté par plusieurs variables. L'agent va trouver le chemin l'amenant à l'état souhaité, et "voyager" d'état en état pour l'atteindre. Des contraintes sur le chemin peuvent également être exprimées, chemin le plus rapide, le moins couteux en temps ou en ressources. Lorsque une recherche exhaustive dans l'ensemble des états admissibles est possible, le contrôle optimal peut être atteint par l'agent. Pour les environnements difficiles, l'utilisation d'heuristiques rend le calcul plus facile (voire même tout simplement possible) au prix d'une potentielle non optimalité du contrôle.\\
+  La planification permet de gérer les environnements incertains, dans le sens où un action de l'agent n'a pas un effet déterminé, mais peut l'emmener dans plusieurs états selon une loi de probabilité. Pour obtenir un contrôle performant, il faut cependant que le modèle de l'environnement prenne en compte cette incertitude sans trop d'erreurs.\\
+
+  Il est possible d'élargir la notion de /plan/ en notion de /politique/. L'agent ne se content plus d'appliquer en aveugle une action prédéfinie mais étudie son état avant de choisir l'action adaptée. Une politique ne se contente ainsi pas de tracer un chemin que l'agent doit suivre, mais propose une action cohérente pour chacun des états dans lequel l'agent peut être amené à se trouver. Il s'agit d'un mécanisme réactif, où l'agent est en interaction constante avec son environnement. Cela permet d'espérer une presqu'optimalité, même si parfois une action n'a pas atteint le but escompté ou prévu par le modèle. La recherche d'une politique à partir d'un modèle de l'environnement touche au domaine de la /programmation dynamique/.\\
+  La consigne que fournit l'opérateur est un critère local quant à la qualité du contrôle que l'on appelle /récompense/. Le critère maximisé par l'agent est la somme pondérée de cette récompense au long de tous les états qu'il traverse. Maximiser la somme pondérée et non la récompense directement force l'agent à apprendre un comportement cohérent sur le long terme.\\
   
-  Une approche moins contraignante est la planification qui à partir d'informations portant sur les effets d'une action sur le système va élaborer un /plan/. Cette suite d'action sera appliquée en séquence pour atteindre le but fixé. Il est beaucoup moins difficile d'établir un modèle mathématique (dit direct) d'un système permettant de prédire les effets d'une action que de créer un modèle inverse comme celui que nécessite l'automatique.
+  Ce cadre a été étendu à celui de l'/apprentissage par renforcement/. Le but est d'obtenir des machines la même versatilité que les êtres vivants. Face à un environnement inconnu, animaux et humains arrivent généralement à en apprendre les caractéristiques et à évoluer dedans, même si leur manière de le faire n'est pas forcément optimale. Créer un agent capable de s'adapter à son environnement permettrait de réduire les coûts d'ingénierie.\\
+  Face à des environnements difficiles à modéliser, il est possible de laisser l'agent intéragir avec l'environnement jusqu'à ce que, petit-à-petit, il parvienne à accomplir la tâche spécifiée par la récompense. Un critère d'oubli permet à l'agent d'apprendre en permanence et ainsi d'évoluer dans des environnements changeants. Il est également possible pour un agent d'apprendre à contrôler un environnement en observant les interactions d'un autre agent avec cet environnement. Cela peut s'avérer utile dans le cas de systèmes coûteux et fragiles, qu'on l'on ne place sous les ordres de l'agent qu'une fois que celui-ci a suffisamment appris.\\
 
-  On rentre ici dans le cadre de la prise de décision séquentielle. Un /agent/ est placé aux commandes du système qui devient alors l'/environnement/ de l'agent. A intervalles réguliers, l'agent va intervenir et appliquer une /action/ sur son environnement (que nous appelions /système/ dans les paragraphes précédents). Les outils de planifications trouvent, à l'aide du modèle direct, le chemin que devra suivre l'agent en appliquant action après action pour, sur le long terme, atteindre le but fixé.\\
-
-  Un défaut notable des approches de planification est leur incapacité à gérer l'incertain. L'idée même de /plan/ suppose que tout se déroule sans accrocs. Bien des environnements de la vie réelle ne sont malheureusement pas aussi sympathiques. Il faut permettre à l'agent d'appliquer une bonne action, même si l'action précédente n'a pas atteint le but escompté ou prévu par le modèle. A cette fin, la notion de /plan/ est élargie en notion de /politique/. A intervalles réguliers, l'agent ne se content plus d'appliquer en aveugle une action prédéfinie mais étudie l'ensemble des informations disponibles sur sa position au sein de l'environnement (appelé /état/)  avant de choisir l'action adaptée. Une politique ne se contente ainsi pas de tracer un chemin que l'agent doit suivre, mais propose une action cohérente pour chacun des états dans lequel l'agent peut être amené à se trouver. Il s'agit d'un mécanisme réactif, où l'agent est en interaction constante avec son environnement.
-
-  La description de la tâche a effectuer est fournie à l'agent sous forme de récompenses, qu'il ne touche que si l'état dans lequel il se trouve est établi comme souhaitable par l'opérateur. On peut symétriquement "punir" l'agent en lui donnant une récompense négative lorsqu'il se trouve dans des états indésirables, par exemple ceux qui mettent l'intégrité du système en danger. Le critère maximisé par l'agent est la somme pondérée de cette récompense au long de tous les états qu'il traverse. Maximiser la somme pondérée et non la récompense directement force l'agent à apprendre un comportement cohérent sur le long terme c'est à dire à ne pas favoriser la maximisation immédiate et éphémère de la récompense seule.
-
-  Des outils de plus en plus puissants ont été développés dans le cadre de l'/apprentissage par renforcement/ (AR) pour permettre à un agent d'apprendre une politique optimisant une récompense donnée. Il est maintenant possible d'apprendre une politique sans connaître même le modèle direct, l'agent le découvrant au fur et à mesure de ses interactions avec l'environnement. Mieux, l'agent peut apprendre une politique optimale (ou quasi optimale) en observant /un autre agent/ interagir avec l'environnement. Cela évite de placer un agent novice aux commandes d'un système coûteux. Au sein de l'équipe IMS, plusieurs chercheurs s'intéressent aux problématiques liées à l'/apprentissage par renforcement/.
-
-#Du contrôle moteur aux systèmes de dialogue parlé, beaucoup d'applications peuvent être envisagées dans le cadre mathématique de la prise de décision séquentielle. Cette formulation place un agent en position d'interaction avec l'environnement ; à chaque instant l'agent examine les informations dont il dispose sur sa situation et prend une décision qui altère cette situation, dans le but de maximiser un certain critère fixé par l'opérateur.
-
-#  Plus précisément, le formalisme utilisé est celui des /Processus Décisionnels de Markov/. Dans ce modèle, l'agent dispose d'une représentation complète du monde, appelée /état/, complète dans le sens où elle contient toutes les informations nécessaires à la prise de la décision. Pas de temps après pas de temps, l'agent applique sa /politique/ en choisissant une /action/ en fonction de l'état où il se trouve.
-
-#  Il peut sembler contraignant de devoir fournir à l'agent une représentation complète du monde à chaque instant. Il s'agit en réalité d'une condition mathématique nécessaire au développement de la théorie. Il n'est en pratique pas si difficile que ça de fournir ce type de représentation du monde. Le cadre mathématique permet aux agents d'évoluer dans un environnement aléatoire, où les effets des actions sont guidés par des probabilités. Les algorithmes que nous utilisons permettent à l'agent d'apprendre un comportement sans avoir à connaître ces probabilités. Il apprend en interagissant avec l'environnement, ou en observant d'autres agents interagir avec l'environnement.
-
-#  Au sein de l'équipe IMS, plusieurs chercheurs s'intéressent à l'/apprentissage par renforcement/, ensemble de techniques permettant la résolution des problèmes de prise de décision séquentielle grâce à un apprentissage mettant en jeu l'interaction de l'agent avec l'environnement. 
+  
 
 * Sujet de thèse
-  Les outils dont nous venons de parler permettent l'apprentissage une fois la représentation du monde mise en place et une fois fournie une fonction de récompense définissant la tâche a effectuer. Cette dernière tâche n'est pas forcément la plus facile. Si, pour les tâches d'ordinaires dévolues à l'automatique, il semble facile de transposer une description textuelle d'une tâche ("Allonger le bras") en une fonction de récompense ("Récompense donnée lorsque l'angle du coude prend la valeur 180°") cette facilité s'estompe rapidement à mesure que la tâche devient complexe.\\
+  Les outils dont nous venons juste de parler permettent l'apprentissage une fois fournie une fonction de récompense définissant la tâche a effectuer. Même les tâches représentées par une "simple" consigne en automatique peuvent être difficile à mettre sous la forme d'un fonction de récompense, car il faut y inclure les contraintes liées à l'intégrité du système, que l'automaticien aura intégré dans le modèle.\\
 
-  Prenons l'exemple de la conduite. Une description textuelle de la tâche est déjà difficile à imaginer. Il est possible de partir de quelques règles du type "Ne pas provoquer de collisions", "Ne pas freiner brusquement", "Ne pas changer de file à l'improviste". Mais que faire lorsque ces règles entrent en conflit ? Si la voiture devant celle de l'agent pile brusquement, doit-il à tout prix éviter la collision ? Pour ce faire, faut-il qu'il change de file à l'improviste ou qu'il freine brusquement ? Il n'est pas facile de répondre /a priori/ à ce type de questions qui deviennent lorsque la tâche est complexe trop nombreuses pour trouver réponse satisfaisante.\\
+  Prenons l'exemple de la conduite. Une description textuelle de la tâche est déjà difficile à imaginer. Il est possible de partir de quelques règles du type "Ne pas provoquer de collisions", "Ne pas freiner brusquement", "Ne pas changer de file à l'improviste". Mais que faire lorsque ces règles entrent en conflit ? Si la voiture devant celle de l'agent pile brusquement, doit-il à tout prix éviter la collision ? Pour ce faire, faut-il qu'il change de file à l'improviste ou qu'il freine brusquement ? Il n'est pas facile de répondre /a priori/ à ce type de questions qui deviennent, lorsque la tâche est complexe, trop nombreuses pour trouver réponse satisfaisante.\\
 
-  Nous nous trouvons maintenant dans une situation paradoxale où nous disposons d'outils extrêmement puissants et pratiques pour apprendre un comportement dans des environnements difficiles et aléatoires, mais où nous ne sommes pas capable de spécifier la tâche que nous voulons voir l'agent apprendre. Nous pouvons heureusement contourner cette difficulté par le biais de l'/apprentissage par renforcement inverse/ (ARI), cadre dans lequel s'inscrit cette thèse.\\
-
-  De la même manière que les jeunes gens n'apprennent pas à conduire en lisant le manuel de leur auto mais en observant leurs parents et leurs moniteurs de conduite puis en se mettant derrière le volant, nous comptons apprendre la tâche à effectuer en observant un /expert/ la réaliser. Cette démarche exploite la capacité humaine à résoudre intuitivement et rapidement des conflits dont nous serions incapables d'analyser sur papier. Pour reprendre l'exemple précédent, un automobiliste saura après un rapide coup d'œil dans son rétroviseur s'il vaut mieux qu'il pile ou qu'il déboîte en urgence et effectuera sa manœuvre dans la foulée.\\
+  L'/apprentissage par renforcement inverse/ (ARI), cadre dans lequel s'inscrit cette thèse, a pour objet de contourner cette difficulté : de la même manière que les jeunes gens n'apprennent pas à conduire en lisant le manuel de leur auto mais en observant leurs parents et leurs moniteurs de conduite puis en se mettant derrière le volant, nous comptons apprendre la tâche à effectuer en observant un /expert/ la réaliser. Cette démarche exploite la capacité humaine à résoudre intuitivement et rapidement des conflits que nous serions incapables d'analyser sur papier. Pour reprendre l'exemple précédent, un automobiliste saura après un rapide coup d'œil dans son rétroviseur s'il vaut mieux qu'il pile ou qu'il déboîte en urgence et effectuera sa manœuvre dans la foulée.\\
 
   Notre but est de dériver, du comportement d'un expert effectuant une tâche, une description de cette tâche sous la forme d'une fonction de récompense, ce qui permet ensuite l'utilisation des outils d'apprentissage par renforcement pour apprendre cette tâche à un agent. Cela ouvrirait le champ d'application de l'apprentissage par renforcement à des tâches encore inaccessibles car trop complexes pour être "expliquées".\\
+  L'intitulé de la thèse, /Découverte automatique d'attributs pour l'imitation/, isole une partie du problème : il s'agit d'extraire de la description de l'/état/ les informations pertinentes à l'expression de la récompense.\\
 
-  Les outils utilisés pour résoudre les problèmes de prise de décision séquentielle remontent jusque dans les années 50. L'apprentissage par renforcement inverse est en comparaison un problème assez jeune, posée pour la première fois en 1998, et qui a réellement pris son essor après 2004.
-
-  Le problème de l'ARI tarde à trouver une solution à la hauteur de ce qui se fait dans le domaine de l'AR. Il s'agit notamment d'un problème dont la formulation mathématique rigoureuse laisse à désirer. Une récompense nulle dans tous les états laisse le champ libre à l'agent qui peut alors faire ce qu'il veut sans être ni pénalisé ni récompensé. Toutes les politiques sont donc optimales vis à vis de cette récompense nulle. Particulièrement, la politique de l'expert est optimale vis à vis de la récompense nulle. Une approche mathématique naïve ne permet de trouver comme récompense justifiant le comportement de l'expert que cette solution triviale et n'apportant absolument pas la réponse à notre problème.
-
-  Un autre soucis de l'approche est la difficulté de l'appliquer à des cas réels tant elle nécessite d'information sur l'environnement. Aucun des algorithmes existants au début de la thèse ne peut se passer de disposer du modèle de l'environnement. L'interaction seule avec l'environnement est en théorie possible, mais en pratique impossible à mettre en place tant les interactions nécessaires sont nombreuses. Il faut alors avoir recours à un simulateur.
+  Si l'on exclut l'automatique (plus ancienne), les outils utilisés pour résoudre les problèmes de prise de décision séquentielle remontent jusque dans les années 50. L'apprentissage par renforcement inverse est en comparaison un problème assez jeune, posée pour la première fois en 1998 \cite{russell1998learning}, et qui a réellement pris son essor après 2004 \cite{abbeel2004apprenticeship}.\\
+  Il s'agit d'un problème mathématiquement mal posé, dans le sens où il existe plus d'une fonction de récompense pour laquelle le comportement d'un expert est optimal. Comment sélectionner "la bonne" ? La situation empire lorsque la politique de l'expert n'est pas connue dans tout l'espace d'état, mais simplement observée tandis que l'expert agit, ce qui limite l'information disponible.\\
+  
 * Contributions au domaine
-  La bibliographie de ce tout nouveau domaine est très fractionnée, avec des apports venue de différentes communautés. Il faut attendre 2000 pour qu'une publication pose formellement le problème. La contribution centrale intervient en 2004 et introduit la notion d'attribut moyen, sorte d'historique du passage dans l'espace d'état. Dans la foulée de cette publication, plusieurs travaux apparaissent qui utilisent cette notion d'attribut moyen. Notamment, on compare cet historique de l'expert à l'historique de l'agent, à qui l'on apprend par modification successives de la récompense à obtenir un historique proche de celui de l'expert. Bien que l'on obtienne parfois une fonction de récompense exploitable, cette approche relève plus de l'apprentissage apr imitation que de l'apprentissage par renforcement inverse au sens philosophique du terme.\\
+  Il faut attendre 2000 pour qu'une publication \cite{ng2000algorithms} pose formellement le problème. La contribution centrale intervient en 2004 \cite{abbeel2004apprenticeship} et introduit la notion d'/attribut moyen/, que suggérait déjà l'analyse de 2000. Après 2004, plusieurs travaux apparaissent qui utilisent cette notion d'attribut moyen (un survey : \cite{neu2009training}).\\
+  L'attribut moyen est une mesure liée à la distribution des états que traverse un agent en suivant sa politique dans l'environnement. Cette mesure tient une place centrale dans beaucoup des algorithmes existants, notamment car deux agents ayant des attributs moyens similaires rempliront une certaine tâche (/i.e./ optimiseront une certaine récompense) de manière similaire.\\
 
-  La première contribution au domaine consiste en un mécanisme de calcul de cet attribut moyen \cite{klein2011batch}. Inspiré d'algorithmes existants pour l'approximation de fonction de valeur, thème central en apprentissage par renforcement, cette contribution apporte une méthode de calcul permettant l'évaluation /off-policy/ de l'attribut moyen d'une politique. Sans l'anglicisme, cela signifie que l'on peut évaluer une grandeur relative à une politique en observant /une autre politique/ (comme par exemple celle de l'expert). Couplée à l'approche centrale de 2004, cette avancée a permis de partiellement lever l'un des principaux obstacles du domaine, en ceci que sur des problèmes simples il est désormais possible de retrouver une fonction de récompense non triviale justifiant le comportement de l'expert, à partir des seules données fournies par celui-ci. Plus besoin de modèle (ou de simulateur). Si l'on dispose d'agents autres que l'expert pouvant manipuler le système assez largement, alors il est possible d'exploiter ces données pour fournir résoudre le problème de l'ARI sans avoir à mettre l'agent en cours d'apprentissage au commandes du système.\\
+  La première contribution au domaine consiste en un mécanisme de calcul de cet attribut moyen \cite{klein2011batch2}. Inspiré d'algorithmes existants pour l'approximation de fonction de valeur, thème central en apprentissage par renforcement, cette contribution apporte une méthode de calcul permettant l'évaluation /off-policy/ de l'attribut moyen d'une politique. Sans l'anglicisme, cela signifie que l'on peut évaluer une grandeur relative à une politique en observant /une autre politique/ (comme par exemple celle de l'expert). Testée en l'injectant dans l'approche centrale de 2004, cette idée a permis de résoudre les problème de l'apprentissage par renforcement inverse sur un problème jouet simple à partir des seules données issues de l'expert, mais n'a pas permis de complètement lever les obstacles imposés par la structure des algorithmes existants. Ceux-ci nécessitent en effet dans leur immense majorité de résoudre le problème direct (celui de l'apprentissage par renforcement) de manière répétée. Cela n'est pas toujours possible uniquement avec les données de l'expert, il faut une autre source d'information.\\
 
-  Une autre contribution de plus faible envergure consiste en un apport sur la définition mathématique formelle du problème \cite{klein2011dimensionality} permettant de réduire l'espace dans lequel on doit chercher les solutions.
+  Une autre contribution de plus faible envergure consiste en un apport sur la définition mathématique formelle du problème \cite{klein2011dimensionality} permettant de réduire l'espace dans lequel on doit chercher les solutions.\\
+
+  Il m'a été permis de participer à trois conférences en temps qu'auteur, j'ai pu rencontrer la communauté /Machine Learning/ au sens large à IJCAI [fn:: [[http://ijcai-11.iiia.csic.es/]]], ainsi qu'à ECML[fn:: [[http://www.ecmlpkdd2011.org/]]] qui précédait EWRL[fn:: [[http://ewrl.wordpress.com/past-ewrl/ewrl9-2011/]]] où j'ai pu présenter mes travaux à un public plus directement concerné du fait du sujet précis de ce /workshop/. Enfin j'ai rencontré la communauté francophone à JFPDA[fn:: [[https://zanuttini.users.greyc.fr/jfpda2011/]]]. Les échanges formels et informels permis par ces déplacements ont enrichi ma culture et ma reflexion.
+
+  
 * Perspectives
   
-  Le problème de l'ARI n'est pas résolu, c'est à dire qu'il n'existe pas de solutions applicables facilement. Néanmoins certaines idées naissent en ce moment même dans la communauté qui rendent la résolution de moins en moins contraignante. Notre apport pour le calcul de l'attribut moyen s'inscrit dans cette direction. Nous pensons que couplé à un nouveau type d'approche ne se basant pas sur un agent imitant l'expert et améliorant petit à petit son imitation, nous pourrons arriver à résoudre l'ARI.
+  Il serait intéressant de pouvoir se passer de la résolution répétée du problème direct. Tout d'abord parce que cela pose des difficultés lors de l'application des algorithmes à des problèmes complexes, ensuite car la démarche visant à simplement rendre similaire l'attribut moyen de l'expert et celui de l'agent tend à résoudre à problème d'imitation : faire pareil que l'expert. La nuance est d'importance avec la formulation originale de l'apprentissage par renforcement inverse, qui consiste à voir la récompense comme une description succincte mais complète de la tâche à effectuer, description que nous souhaitons extraire.
+  
 
-\bibliographystyle{alpha}
-\bibliography{../../Biblio/Biblio.bib}
+# \bibliographystyle{alpha}
+# \bibliography{../../Biblio/Biblio.bib}
+ \begin{btSect}[alpha]{../../Biblio/BiblioKlein.bib}
+ \section{Mes publications}
+ \nocite{klein2011dimensionality,klein2011batch,klein2011batch2,klein2011batch3}
+ \btPrintCited
+ \end{btSect}
+ \begin{btSect}[alpha]{../../Biblio/Biblio.bib}
+ \section{References}
+ \btPrintCited
+ \end{btSect}
