--- a/klein2012/klein2012structured_poster.tex
+++ b/klein2012/klein2012structured_poster.tex
@@ -11,6 +11,7 @@
 \usepackage{amsmath}
 \usepackage{pifont}
 \usepackage{slashbox}
+\usepackage{marvosym}
 \include{headertikz}
 \usetikzlibrary{through,shapes,arrows,decorations.pathmorphing,backgrounds,positioning,fit} 
 
@@ -91,10 +92,10 @@ fill=orange!20]
 
 
 \conf{European workshop on reinforcement learning}
-\title{Batch, Off-policy and Model-free Apprenticeship Learning}
-\author{\underline{Edouard Klein}$^{\dag\ddag}$, Matthieu Geist$^\dag$ and Olivier Pietquin$^\dag$\\\texttt{firstname.lastname@supelec.fr}}
+\title{Inverse Reinforcement Learning through Structured Classification}
+\author{\underline{Edouard Klein}$^{\dag\ddag}$, Matthieu Geist$^\dag$ and Olivier Pietquin$^{\dag\textrm{\Ankh}}$\\\texttt{firstname.lastname@supelec.fr}}
 \date{\today}
-\institute[Supélec]{$\dag$Supélec UMI 2958 (GeorgiaTech - CNRS), France\\$\ddag$Equipe ABC UMR 7503 (LORIA-CNRS), France}
+\institute[Supélec]{$\dag$Equipe MaLIS (Supélec), France\\$\ddag$Equipe ABC UMR 7503 (LORIA-CNRS), France\\\Ankh UMI 2958 (GeorgiaTech - CNRS)}
 \newlength{\columnheight}
 \setlength{\columnheight}{105cm}
 
@@ -166,113 +167,54 @@ fill=orange!20]
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Quatrième ligne
   \begin{columns}
     \begin{column}{.48\textwidth}
-    \begin{block}{Abbeel and Ng's IRL}
+    \begin{block}{LPSFBC}
       \begin{columns}
         \begin{column}{0.001\textwidth}
           \vspace{8cm}
         \end{column}
         \begin{column}{\textwidth}
           \centering
-
-          \begin{tikzpicture} [scale=3]
-            \node[element] (trajE) at (0,0) {$\vcenter{\hbox{\includegraphics[height=2cm]{Expert.png}}}$Trajectories} ;
-            \node[action] (mech) at (3,-0.7) {\includegraphics[height=2cm]{Moulinette.png}} ;
-            \node[element] (policy) at (5,-0.7) {$\vcenter{\hbox{\includegraphics[height=2cm]{Pi.png}}}$Policy} ;
-            \node[action] (sim) at (8,-0.7) {$\vcenter{\hbox{\includegraphics[height=2cm]{ML.png}}}$Simulator} ;
-            \node[element] (trajA) at (0,-1.4) {$\vcenter{\hbox{\includegraphics[height=2cm]{Agent.png}}}$Trajectories} ;
-            \draw [->,line width=1.5mm] (trajE.east) .. controls (2,0) and (2,-0.7) .. (mech.west);
-            \draw [->,line width=1.5mm] (trajA.east) .. controls (2,-1.4) and (2,-0.7) .. (mech.west);  
-            \draw [->,line width=1.5mm] (mech.east) -- (policy.west);
-            \draw [->,line width=1.5mm] (policy.east) -- (sim.west);
-            \draw [->,line width=1.5mm] (sim.east) -- (10,-0.7) -- (10,-2.1) -- (0,-2.1) -- (trajA.south);
-          \end{tikzpicture}
+          Laius sur les classifieurs
         \end{column}
       \end{columns}       
       
     \end{block}
-    \begin{block}{LSTD-$\mu$}
-      \begin{columns}
-        \begin{column}{0.001\textwidth}
-          \vspace{8cm}
-        \end{column}
-        \begin{column}{\textwidth}
-          \centering
-          \begin{tikzpicture}[scale=3]
-            \node[element] (trajE) at (0,0) {$\vcenter{\hbox{\includegraphics[height=2cm]{Expert.png}}}$Transitions} ;
-            \node[action] (mech) at (3,-0.7) {\includegraphics[height=2cm]{Moulinette.png}} ;
-            \node[element] (policy) at (5,-0.7) {$\vcenter{\hbox{\includegraphics[height=2cm]{Pi.png}}}$Policy} ;
-            \node[element] (trajA) at (0,-1.4) {$\vcenter{\hbox{\includegraphics[height=2cm]{Agent.png}}}$Transitions} ;
-            \draw [->,line width=1.5mm] (trajE.east) .. controls (2,0) and (2,-0.7) .. (mech.west);
-            \draw [->,line width=1.5mm] (trajA.east) .. controls (2,-1.4) and (2,-0.7) .. (mech.west);  
-            \draw [->,line width=1.5mm] (mech.east) -- (policy.west);
-            \draw [->,line width=1.5mm] (policy.east) -- (10,-0.7) -- (10,-1.4) -- (3,-1.4) -- (mech.south);
-          \end{tikzpicture}
-        \end{column}
-      \end{columns}       
-    \end{block}
     \end{column}
     
     \begin{column}{.48\textwidth}
-\begin{block}{Update step}
-  $t = \max\limits_{\theta}\min\limits_{\pi}\theta^T(\mu^{E}(s_0)-\mu^{\pi}(s_0))$
+\begin{block}{Expert}
+  \begin{columns}
+    \begin{column}{0.001\textwidth}
+      \vspace{8cm}
+    \end{column}
+    \begin{column}{\textwidth}
+      \centering
+      Parallèle sur l'expert
+    \end{column}
+  \end{columns}
 \end{block}
 
-      \begin{block}{Idea}
-        
-        $V = V^\pi(s_t) = E\left[\left.\sum\limits_{i}\gamma^i r_{t+i}\right|\pi\right]$
-        \hfill $\mu^\pi(s_t) = E\left[\left.\sum\limits_i\gamma^i\phi(s_{t+i})\right|\pi\right]$ \\
-        \begin{center}
-          Transition: $s_t,a_t,s_{t+1},r_t$
-        \end{center}
-      \end{block}
-\begin{columns}
-\begin{column}{.5\textwidth}
-\begin{block}{LSTD}
-\label{sec-3_2_1_2}
-
-     Estimator : $\hat V^\pi(s) = \omega^T\phi(s)$
-     \begin{equation*}
-     \omega = LSTD_{\color{red}\phi}( \{s_t,a_t,s_{t+1}\}_t,\{{\color{red}r_t}\}_t)
-     \end{equation*}
-\end{block}
-\end{column}
-\begin{column}{.5\textwidth}
-\begin{block}{LSTD-$\mu$}
-\label{sec-3_2_1_3}
-
-     Estimator : $\hat \mu^\pi(s) = \xi^{T}\psi(s)$
-     \begin{equation*}
-     \xi_i = LSTD_{\color{red}\psi}( \{s_t,a_t,s_{t+1}\}_t, \{{\color{red}\phi_i(s_t)}\}_t )
-     \end{equation*}
-\end{block}
-\end{column}
-\end{columns}
-
-      %% \begin{block}{#5}
-      %%   \begin{columns}
-      %%     \begin{column}{0.001\textwidth}
-      %%       \vspace{#7}
-      %%     \end{column}
-      %%     \begin{column}{\textwidth}
-      %%       \centering
-      %%       #6
-      %%     \end{column}
-      %%   \end{columns}       
-      %% \end{block}
     \end{column}
   \end{columns}
 \vfill
 %%%%%%%%%%%%%%%%%%%%%%Cinquième ligne
+
+\begin{WholeWidthBox}{Putting it all together}
+  \centering
+  Blah blah blah
+\end{WholeWidthBox}
+
+%%%%%%%%%%%%%%%%%%%%%%Sixième ligne
   \begin{columns}
     \begin{column}{.48\textwidth}
-      \begin{block}{Quality Criterion}
+      \begin{block}{Pseudo-code}
         \centering
         \fontsize{11pt}{11pt}\selectfont
         \resizebox{.55\columnwidth}{!}{\includegraphics[width=\textwidth]{LAFEM_Exp3_Vagent.pdf}}
       \end{block}
     \end{column}
     \begin{column}{.48\textwidth}
-      \begin{block}{Gridworld}
+      \begin{block}{Highway}
         \centering
         \fontsize{11pt}{11pt}\selectfont
         \resizebox{.55\columnwidth}{!}{\includegraphics[width=\textwidth]{SCIRL_Exp3_fig1.pdf}}
@@ -281,7 +223,7 @@ fill=orange!20]
   \end{columns}
   \begin{columns}
     \begin{column}{.48\textwidth}
-      \begin{block}{Inverted Pendulum (one run)}
+      \begin{block}{GridWorld}
         \centering
         \fontsize{11pt}{11pt}\selectfont
         \resizebox{.55\columnwidth}{!}{\includegraphics[width=\textwidth]{LAFEM_Exp3_Vexpert.pdf}}
