--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -1,5 +1,6 @@
 %\documentclass[gray]{jmlr} % test grayscale version
 \documentclass[tablecaption=bottom]{jmlr}
+%\usepackage{marvosym}
 
 % The following packages will be automatically loaded:
 % amsmath, amssymb, natbib, graphicx, url, algorithm2e
@@ -155,7 +156,11 @@
  % Smith\thanks{A note}}
 
  % Two authors with the same address
-  \author{\Name{Paper under review at ICML}}
+
+\author{\Name{{\'E}douard Klein$^{\dag\ddag}$}, \Name{Bilal Piot$^{\dag\textrm{*}}$}, \Name{Matthieu Geist$^\dag$}, \Name{Olivier Pietquin$^{\dag\textrm{*}}$}\\
+\Email{firstname.lastname@supelec.fr}\\
+\addr $\dag$ {\'E}quipe IMS/MaLIS (Sup{\'e}lec), $\ddag$ {\'E}quipe ABC UMR 7503 (Loria-CNRS), * UMI 2958 (GeorgiaTech-CNRS).
+}
 
  % Three or more authors with the same address:
  % \author{\Name{Author Name1} \Email{an1@sample.com}\\
